--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -16,3 +16,10 @@ button.lock: Заключено
 button.unlock: Отключено
 button.export: Изнеси
 button.import: Внасям
+required: изискван
+security.log_in: Вход
+security.log_out: Изход
+security.confirm_exit: 'Сигурен ли сте че искате да излезнете?'
+'Bad credentials.': 'Неизвестно потребителско име или сгрешена парола.'
+user.email: Имеил
+user.password: Парола
