--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -19,6 +19,7 @@ button.import: Importar
 required: obligatorio
 security.log_in: Ingresar
 security.log_out: Salir
+security.remember_me: 'Mantener la sesión abierta'
 security.confirm_exit: '¿Está seguro de salir?'
 'Bad credentials.': 'Nombre de usuario desconocido o contraseña incorrecta.'
 user.email: Email
