--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -19,6 +19,7 @@ button.import: インポート
 required: 必須
 security.log_in: ログイン
 security.log_out: 終了
+security.remember_me: ログインを維持
 security.confirm_exit: 終了してログアウトしますか？
 'Bad credentials.': 不明なユーザー名または誤ったパスワードです。
 user.email: Eメール
