--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -19,6 +19,7 @@ button.import: Импорт
 required: обязательное
 security.log_in: Вход
 security.log_out: Выход
+security.remember_me: 'Запомнить меня'
 security.confirm_exit: 'Вы уверены, что хотите выйти?'
 'Bad credentials.': 'Неизвестный пользователь или неверный пароль.'
 user.email: Эл.почта
