--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -19,6 +19,7 @@ button.import: Importera
 required: obligatorisk
 security.log_in: 'Logga in'
 security.log_out: 'Logga ut'
+security.remember_me: 'Förbli inloggad'
 security.confirm_exit: 'Är du säker på att du vill avsluta?'
 'Bad credentials.': 'Okänt användarnamn eller felaktigt lösenord.'
 user.email: Email
