--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -19,6 +19,7 @@ button.import: Внасям
 required: изискван
 security.log_in: Вход
 security.log_out: Изход
+security.remember_me: 'Запомни ме'
 security.confirm_exit: 'Сигурен ли сте че искате да излезнете?'
 'Bad credentials.': 'Неизвестно потребителско име или сгрешена парола.'
 user.email: Имеил
