--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -19,6 +19,7 @@ button.import: Importieren
 required: erforderlich
 security.log_in: Anmelden
 security.log_out: Abmelden
+security.remember_me: 'Angemeldet bleiben'
 security.confirm_exit: 'Möchten Sie wirklich beenden?'
 'Bad credentials.': 'Unbekannter Benutzername oder falsches Passwort.'
 user.email: Email-Adresse
