--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -19,6 +19,7 @@ button.import: Importa
 required: obbligatorio
 security.log_in: Entra
 security.log_out: Esci
+security.remember_me: Ricordami
 security.confirm_exit: 'Vuoi davvero uscire?'
 'Bad credentials.': 'Nome utente non riconosciuto o password errata.'
 user.email: Email
