--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -19,6 +19,7 @@ button.import: Import
 required: wymagany
 security.log_in: Logowanie
 security.log_out: Wyloguj
+security.remember_me: 'Pozostań zalogowany'
 security.confirm_exit: 'Czy jesteś pewien, że chesz wyjść?'
 'Bad credentials.': 'Nieprawidłowa nazwa użytkownika lub hasła.'
 user.email: E-mail
