--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -19,6 +19,7 @@ button.import: Importar
 required: obrigatório
 security.log_in: Logar
 security.log_out: Deslogar
+security.remember_me: 'Permanecer logado'
 security.confirm_exit: 'Tem certeza que quer sair?'
 'Bad credentials.': 'Usuário desconhecido ou senha incorreta.'
 user.email: E-mail
