--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -22,5 +22,6 @@ security.log_out: Изход
 security.remember_me: 'Запомни ме'
 security.confirm_exit: 'Сигурен ли сте че искате да излезнете?'
 'Bad credentials.': 'Неизвестно потребителско име или сгрешена парола.'
+administration: Администрация
 user.email: Имеил
 user.password: Парола
