--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -22,5 +22,6 @@ security.log_out: Kijelentkezés
 security.remember_me: 'Emlékezzen rám'
 security.confirm_exit: 'Biztos ki szeretne lépni?'
 'Bad credentials.': 'Ismeretlen felhasználónév vagy rossz jelszó.'
+administration: Adminisztráció
 user.email: E-mail
 user.password: Jelszó
