--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -22,5 +22,6 @@ security.log_out: Uitloggen
 security.remember_me: 'Blijf ingelogd'
 security.confirm_exit: 'Ben je zeker dat je wilt uitloggen?'
 'Bad credentials.': 'Onbekende gebruikersnaam of verkeerd wachtwoord.'
+administration: Administratie
 user.email: E-mail
 user.password: Wachtwoord
