--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -22,5 +22,6 @@ security.log_out: Çıkış
 security.remember_me: 'Sürekli bağlı kal'
 security.confirm_exit: 'Çıkmak istediğinizden emin misiniz?'
 'Bad credentials.': 'Bilinmeyen kullanıcı adı ya da yanlış parola.'
+administration: Yönetim
 user.email: E-posta
 user.password: Parola
