--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -20,6 +20,7 @@ required: obrigatório
 security.log_in: Logar
 security.log_out: Deslogar
 security.remember_me: 'Permanecer logado'
+security.session_expired: 'A sua sessão expirou. Por favor, faça login novamente.'
 security.confirm_exit: 'Tem certeza que quer sair?'
 'Bad credentials.': 'Usuário desconhecido ou senha incorreta.'
 administration: Administração
