--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -20,6 +20,7 @@ required: 必須
 security.log_in: ログイン
 security.log_out: 終了
 security.remember_me: ログインを維持
+security.session_expired: セッションが失効しました。ログインし直してください。
 security.confirm_exit: 終了してログアウトしますか？
 'Bad credentials.': 不明なユーザー名または誤ったパスワードです。
 administration: 管理
