--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -20,6 +20,7 @@ required: obligatorisk
 security.log_in: 'Logga in'
 security.log_out: 'Logga ut'
 security.remember_me: 'Förbli inloggad'
+security.session_expired: 'Din session har gått ut. Vänligen logga in på nytt.'
 security.confirm_exit: 'Är du säker på att du vill avsluta?'
 'Bad credentials.': 'Okänt användarnamn eller felaktigt lösenord.'
 administration: Administration
