--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -24,5 +24,12 @@ security.session_expired: 'Your session has expired. Please log in again.'
 security.confirm_exit: 'Are you sure you want exit?'
 'Bad credentials.': 'Unknown username or bad password.'
 administration: Administration
+users: Users
+user.username: 'User name'
+user.fullname: 'Full name'
 user.email: Email
 user.password: Password
+permissions: Permissions
+role.administrator: Administrator
+role.user: User
+description: Description
