--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -24,5 +24,12 @@ security.session_expired: 'Your session has expired. Please login again.'
 security.confirm_exit: 'Sunteti sigur ca doriti sa iesiti?'
 'Bad credentials.': 'Cont inexistent sau parola incorecta.'
 administration: Administrare
+users: Utilizatori
+user.username: 'Nume utilizator'
+user.fullname: 'Nume si prenume'
 user.email: Email
 user.password: Parola
+permissions: Permisiuni
+role.administrator: Administrator
+role.user: Utilizator
+description: Descriere
