--- a/app/Resources/translations/messages.ja.yml
+++ b/app/Resources/translations/messages.ja.yml
@@ -29,6 +29,9 @@ user.username: ユーザー名
 user.fullname: フルネーム
 user.email: Eメール
 user.password: パスワード
+user.status: 状態
+user.enabled: 有効
+user.disabled: 無効
 permissions: 権限
 role.administrator: システム管理者
 role.user: ユーザー
