--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -29,6 +29,9 @@ user.username: Gebruikersnaam
 user.fullname: 'Volledige naam'
 user.email: E-mail
 user.password: Wachtwoord
+user.status: Status
+user.enabled: Ingeschakeld
+user.disabled: Uitgeschakeld
 permissions: Permissies
 role.administrator: Beheerder
 role.user: Gebruiker
